Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25106

Issue deprecation warnings for innodb_checksum_algorithm values none,innodb,strict_none,strict_innodb

    XMLWordPrintable

Details

    Description

      As noted in MDEV-25105, we will remove the innodb_checksum_algorithm values none, innodb, strict_none, strict_innodb in MariaDB Server 10.6. We should issue deprecation warnings when one of these options are used.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.